--- a/iris/templates/iris/base.html
+++ b/iris/templates/iris/base.html
@@ -11,7 +11,7 @@
     <title>Machine Learning Prediction</title>
   </head>
   <body>
-    {% include 'navbar.html' %}
+    {% include 'iris/navbar.html' %}
 
     {% block main %}
     {% endblock main %}
