--- a/iris/templates/iris/iris.html
+++ b/iris/templates/iris/iris.html
@@ -7,28 +7,31 @@
     <div class="row justify-content-md-center">
         <div class="col-md-4">
             <h1>Iris Prediction</h1>
-            <form action="" id="post-form">
+            <form action="" id="post-form" method = "POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="sepal_length">Sepal Length</label>
-                    <input type="number" step="0.1" class="form-control" id="sepal_length" placeholder="" required>
+                    <label>Sepal Length</label>
+                    <input type="number" step="0.1" class="form-control" name="sepal_length" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label for="Sepal Width">Sepal Width</label>
-                    <input type="number" step="0.1" class="form-control" id="sepal_width" placeholder="" required>
+                    <label>Sepal Width</label>
+                    <input type="number" step="0.1" class="form-control" name="sepal_width" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label for="petal_length">Petal Length</label>
-                    <input type="number" step="0.1" class="form-control" id="petal_length" placeholder="" required>
+                    <label>Petal Length</label>
+                    <input type="number" step="0.1" class="form-control" name="petal_length" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label for="petal_width">Petal Width</label>
-                    <input type="number" step="0.1" class="form-control" id="petal_width" placeholder="" required>
+                    <label>Petal Width</label>
+                    <input type="number" step="0.1" class="form-control" name="petal_width" placeholder="" required>
                 </div>
                 <button type="submit" value="Submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
             </form>
         </div>
     </div>
+</div>
+<div>
+
 </div>
 
 <!-- End of form -->
