--- a/iris/templates/iris/iris.html
+++ b/iris/templates/iris/iris.html
@@ -6,7 +6,7 @@
     <div class="container pt-5">
     <div class="row justify-content-md-center">
         <div class="col-md-4">
-            <h1>Iris Prediction</h1>
+            <h1 style ="text-align: center">Iris Prediction Using SVM Algorithm</h1>
             <form action="" id="post-form" method = "POST">
                 {% csrf_token %}
                 <div class="form-group">
@@ -28,11 +28,27 @@
                 <button type="submit" value="Submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
             </form>
         </div>
+        <div class="col-md-4">
+            <div class="card" style="width: 30rem;">
+            <img class="card-img-top" src="..." alt="{{classification}}">
+            <div class="card-body">
+                <h5 class="card-title" style = "text-align: center">The Predicted Iris Flower is {{classification}} </h5>
+                <p class="card-text">{{classification}}</p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Cras justo odio</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
+            <div class="card-body">
+                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="card-link">Another link</a>
+            </div>
+            </div>
+        </div>
     </div>
 </div>
-<div>
 
-</div>
 
 <!-- End of form -->
 {% endblock main %}
