--- a/iris/templates/iris/iris.html
+++ b/iris/templates/iris/iris.html
@@ -10,19 +10,19 @@
             <form action="" id="post-form" method = "POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label>Sepal Length</label>
+                    <label>Sepal Length (cm)</label>
                     <input type="number" step="0.1" class="form-control" name="sepal_length" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label>Sepal Width</label>
+                    <label>Sepal Width (cm)</label>
                     <input type="number" step="0.1" class="form-control" name="sepal_width" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label>Petal Length</label>
+                    <label>Petal Length (cm)</label>
                     <input type="number" step="0.1" class="form-control" name="petal_length" placeholder="" required>
                 </div>
                 <div class="form-group">
-                    <label>Petal Width</label>
+                    <label>Petal Width (cm)</label>
                     <input type="number" step="0.1" class="form-control" name="petal_width" placeholder="" required>
                 </div>
                 <button type="submit" value="Submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Submit</button>
@@ -30,15 +30,16 @@
         </div>
         <div class="col-md-4">
             <div class="card" style="width: 30rem;">
-            <img class="card-img-top" src="..." alt="{{classification}}">
+            <img class="card-img-top" src="..." alt="{{ classification }}">
             <div class="card-body">
                 <h5 class="card-title" style = "text-align: center">The Predicted Iris Flower is {{classification}} </h5>
                 <p class="card-text">{{classification}}</p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Sepal Length: {{ sepal_length }}</li>
+                <li class="list-group-item">Sepal Width: {{ sepal_width }}</li>
+                <li class="list-group-item">Petal Length: {{ petal_length }}</li>
+                <li class="list-group-item">Petal Width: {{ petal_width }}</li>
             </ul>
             <div class="card-body">
                 <a href="#" class="card-link">Card link</a>
