--- a/iris/templates/iris/navbar.html
+++ b/iris/templates/iris/navbar.html
@@ -9,7 +9,7 @@
         <a class="nav-link" href="#">Prediction <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/results">Results</a>
+        <a class="nav-link" href="{% url 'iris_results' %}">Results</a>
       </li>
     </ul>
   </div>
