added home app and media

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -12,7 +12,7 @@
     <title>Machine Learning Prediction</title>
   </head>
   <body>
-    {% include 'iris/navbar.html' %}
+    {% include 'home/navbar.html' %}
 
     {% block main %}
     {% endblock main %}
