added diabetes dataset and updated index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,19 +2,18 @@
 {% load static %}
 {% block main %}
     <div class="container">
-        <div class="card-group vgr-cards">
         {% for item in card %}
-            <div class="card">
-                <div class="card-img-body">
-                    <img class="card-img" src={{ item.image.url }} alt="Card image cap">
-        </div>
+            <div class="card flex-row">
+                    <img class="h-100" src={{ item.image.url }} alt= {{item.title}}>
         <div class="card-body">
             <h4 class="card-title">{{item.title}}</h4>
             <p class="card-text">{{ item.description }}</p>
-            <a href="{{ item.get_absolute_url }}" class="btn btn-outline-primary">Primary</a>
+            <a href="{{ item.get_absolute_url }}" class="btn btn-primary">View {{item.title}}</a>
         </div>
+    </div>
+    </div>
 
     {% endfor %}
-    </div>
+
 
 {% endblock main %}
