--- a/home/templates/home/navbar.html
+++ b/home/templates/home/navbar.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'iris_results' %}">Results</a>
+        <a class="nav-link" href="{% url 'iris' %}">Iris</a>
       </li>
     </ul>
   </div>
